// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusItems should render a single status item correctly 1`] = `
<div
  className="status-items"
>
  <div
    className="status-items"
  >
    <div
      className="status-item"
    >
      <div
        className="status-item-header"
      >
        <div
          className="status-pill-approved"
        >
          <div
            className="pill-text"
          >
            Approved
          </div>
        </div>
        <div
          className="status-item-date"
        >
          August 25th 2020
        </div>
      </div>
      <div
        className="item-substatus-text"
      >
        Approval letter sent
      </div>
      <div
        className="status-item-text"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque bibendum condimentum lorem consectetur eleifend.
      </div>
    </div>
  </div>
</div>
`;

exports[`StatusItems should render empty status items correctly 1`] = `
<div
  className="status-items"
/>
`;

exports[`StatusItems should render multiple status items correctly 1`] = `
<div
  className="status-items"
>
  <div
    className="status-items"
  >
    <div
      className="status-item"
    >
      <div
        className="status-item-header"
      >
        <div
          className="status-pill-approved"
        >
          <div
            className="pill-text"
          >
            Approved
          </div>
        </div>
        <div
          className="status-item-date"
        >
          August 25th 2020
        </div>
      </div>
      <div
        className="item-substatus-text"
      >
        Approval letter sent
      </div>
      <div
        className="status-item-text"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque bibendum condimentum lorem consectetur eleifend.
      </div>
    </div>
  </div>
  <div
    className="status-items"
  >
    <div
      className="status-item"
    >
      <div
        className="status-item-header"
      >
        <div
          className="status-pill-approved"
        >
          <div
            className="pill-text"
          >
            Approved
          </div>
        </div>
        <div
          className="status-item-date"
        >
          August 24th 2020
        </div>
      </div>
      <div
        className="item-substatus-text"
      >
        Unit selected
      </div>
      <div
        className="status-item-text"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque bibendum condimentum lorem consectetur eleifend.
      </div>
    </div>
  </div>
  <div
    className="status-items"
  >
    <div
      className="status-item"
    >
      <div
        className="status-item-header"
      >
        <div
          className="status-pill-approved"
        >
          <div
            className="pill-text"
          >
            Approved
          </div>
        </div>
        <div
          className="status-item-date"
        >
          August 23rd 2020
        </div>
      </div>
      <div
        className="item-substatus-text"
      >
        Waiting for subsidy inspection
      </div>
      <div
        className="status-item-text"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque bibendum condimentum lorem consectetur eleifend.
      </div>
    </div>
  </div>
  <div
    className="status-items"
  >
    <div
      className="status-item"
    >
      <div
        className="status-item-header"
      >
        <div
          className="status-pill-waitlisted"
        >
          <div
            className="pill-text"
          >
            Waitlisted
          </div>
        </div>
        <div
          className="status-item-date"
        >
          August 22nd 2020
        </div>
      </div>
      <div
        className="item-substatus-text"
      >
        Written confirmation sent
      </div>
      <div
        className="status-item-text"
      />
    </div>
  </div>
  <div
    className="status-items"
  >
    <div
      className="status-item"
    >
      <div
        className="status-item-header"
      >
        <div
          className="status-pill-leased"
        >
          <div
            className="pill-text"
          >
            Lease Signed
          </div>
        </div>
        <div
          className="status-item-date"
        >
          August 21st 2020
        </div>
      </div>
      
      <div
        className="status-item-text"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque bibendum condimentum lorem consectetur eleifend.
      </div>
    </div>
  </div>
  <div
    className="status-items"
  >
    <div
      className="status-item"
    >
      <div
        className="status-item-header"
      >
        <div
          className="status-pill-leased"
        >
          <div
            className="pill-text"
          >
            Lease Signed
          </div>
        </div>
        <div
          className="status-item-date"
        >
          August 20th 2020
        </div>
      </div>
      
      <div
        className="status-item-text"
      />
    </div>
  </div>
</div>
`;
